<?xml version="1.0"?>
<package format="2">
  <name>ars408_ros</name>
  <version>0.0.1</version>
  <description>The ars408_ros package</description>

  <maintainer email="yoyo@todo.todo">yoyo</maintainer>

  <license>MIT</license>
  <url type="website">https://github.com/YoYo860224/ars408_ros</url>

  <author email="yoyo@temp.com">yoyo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- In ros_canopen. -->
  <depend>can_msgs</depend>
  <depend>socketcan_bridge</depend>

  <export>

  </export>
</package>

<!-- For more detail -->
<!-- http://wiki.ros.org/catkin/package.xml -->