<?xml version="1.0"?>
<package format="2">
  <name>ars408_msg</name>
  <version>0.0.1</version>
  <description>The ars408_msg package</description>

  <maintainer email="yoyo@todo.todo">yoyo</maintainer>

  <license>MIT</license>
  <url type="website">https://github.com/YoYo860224/ars408_ros</url>

  <author email="yoyo@temp.com">yoyo</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
